# git-test

./: README.md  index.html  package-lock.json  package.json  pyproject.toml
examples/: seed_data.py
src/thesis_prototype/: __init__.py  auth_service.py  conflict_detection.py  demo_api.py  demo_backend.py  demo_exports.py  demo_ui.py  governance_service.py  models.py  permissions.py  registry.py  validation_service.py
tests/: test_auth_rbac.py  test_conflict_detection_service.py  test_defense_conflict_detection.py  test_defense_domain_registry.py  test_defense_governance_service.py  test_defense_validation_service.py  test_demo_backend_api.py  test_demo_entrypoints.py  test_demo_exports.py  test_models_and_registry.py
